# fastapi-habit-tracker

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: fastapi-habit-tracker-ci.yml
alembic/: env.py
alembic/versions/: 17d1fb45f3a8_init.py  27cdcc3e56e0_add_cascade_delete_to_habitlog.py  2a64e14c0375_convert_period_to_enum.py  4279a8e05696_init.py  676d1f6bb044_create_langgraph_tables.py
fastapi_habit_tracker/: config.py  db.py  main.py
fastapi_habit_tracker/ai/: agent.py  extractor.py  info_agent.py  logging_agent.py  schemas.py
fastapi_habit_tracker/dependencies/: auth.py
fastapi_habit_tracker/models/: __init__.py  habit.py  habit_log.py  user.py
fastapi_habit_tracker/routers/: ai.py  auth.py  habit_logs.py  habits.py
fastapi_habit_tracker/schemas/: ai.py  habit.py  habit_log.py  user.py
fastapi_habit_tracker/utils/: security.py  stats.py
scripts/: copy_sqlite_to_postgres.py  migrate_sqlite_to_postgres.py
tests/: conftest.py  test_habit_logs.py  utils.py
tests/integration/: test_ai_mock.py  test_auth.py  test_habit_logs.py  test_habits.py
tests/unit/: test_stats.py
