[project]
name = "fastapi-habit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.123.4",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
[tool.ruff]
line-length = 88
