[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_habit_tracker"]

[project]
name = "fastapi-habit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.123.4",
    "langchain>=1.2.8",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.3.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.27",
]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["fastapi_habit_tracker"]
extend-exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations"
]
fix =true

[tool.ruff.lint]
select = [
    "F",
    "E", "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "ASYNC",
    "RUF"
]
ignore = []


[tool.ruff.lint.isort]
known-first-party = ["fastapi_habit_tracker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
